fix lesson count element alignment in course preview

--- a/style/course/_course-preview.scss
+++ b/style/course/_course-preview.scss
@@ -42,11 +42,11 @@ li.course,
         
         .course-author, .course-lesson-count {
            width: 50%;
-           float: left;
         }
         
         .course-lesson-count {
             text-align: right;
+            float: right;
         }
         
         .course-lesson-progress {
